# GraphPatterns

./: GraphPatterns.cabal
Control/Monad/: TransT.hs
Data/: TypeRelation.hs
Data/GraphPatterns/: Anomaly.hs  Edge.hs  GraphEngine.hs  Language.hs  MList.hs  Types.hs  Vertex.hs
Data/GraphPatterns/Engines/: FunctionalGraph.hs  RelationalGraph.hs
examples/: GraphCore.hs  GraphOfTheGods.lhs  PureGraph.hs  Recommendation.hs
