name:                GraphPatterns
version:             0.1.0.0
synopsis:            Graph query EDSL
homepage:            https://github.com/avieth/GraphPatterns
license:             BSD3
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          aovieth@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.GraphPatterns.Language
                     , Data.GraphPatterns.GraphEngine
                     , Data.GraphPatterns.Edge
                     , Data.GraphPatterns.Vertex
                     , Data.GraphPatterns.Interpreter
                     , Data.GraphPatterns.Types
                     , Data.GraphPatterns.MList
  
  other-extensions:    TypeFamilies
  
  build-depends:       base >=4.6 && <4.8
                     , FInterpreter >=0.1 && <=0.2
                     , free >=4.0 && <=5.0
                     , transformers >= 0.4
  
  default-language:    Haskell2010
